--- a/Back/package.json
+++ b/Back/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "config": "^3.3.12",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "nodemon": "^3.1.9"
