--- a/Back/package.json
+++ b/Back/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "lodash": "^4.17.21",
     "nodemon": "^3.1.9"
   }
 }
