--- a/Back/package.json
+++ b/Back/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose-timestamp": "^0.6.0",
     "nodemon": "^3.1.9",
